<resources>
    <string name="app_name">Inventory Stage 2</string>
    <string name="init_instructions">nothing to display because no data stored, click on below + button to add a new product</string>
    <string name="product_name">please insert product name</string>
    <string name="product_price">product price</string>
    <string name="product_quantity">product quantity</string>
    <string name="product_supplier_name">product supplier name</string>
    <string name="product_supplier_phone_number">product supplier phone number</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="edit_product_detail">edit product detail</string>
    <string name="insert_valid_name">insert a valid product name</string>
    <string name="insert_valid_price">insert a valid product price</string>
    <string name="insert_valid_quantity">insert a valid product quantity</string>
    <string name="insert_valid_supplier_name">insert a valid product supplier name</string>
    <string name="insert_valid_supplier_phone">insert a valid supplier phone number</string>
    <string name="action_insert_dummy_data">insert dummy data</string>
    <string name="action_delete_all_entries">delete all entries</string>
    <string name="edit_product_detail_new_product">Add Product</string>
    <string name="edit_product_detail_update_product">Edit Product</string>
    <string name="editor_insert_failed">product save failed</string>
    <string name="editor_insert_successful">product save done</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="no_change">No change made. Record already saved</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete product?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">product delete failed</string>
    <string name="editor_delete_product_successful">product deleted</string>
    <string name="one_sale">SALE</string>
    <string name="add_one">add one to quantity</string>
    <string name="minus_one">quantity minus one</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="ZERO">0</string>
    <string name="currency_symbol">$</string>
    <string name="unit">pcs</string>
    <string name="delete_button">DELETE</string>
    <string name="order_button">ORDER</string>
    <string name="upgrading_database">Upgrading database from version</string>
    <string name="quantity_changed">Quantity changed</string>
</resources>
