<?xml version="1.0" encoding="utf-8"?>
<!-- made by Antonella on Jun/23/2018 using Udacity ud845 course
     examples that are under this license:
     Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the list of products -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">


    <EditText
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="text"
        android:labelFor="@id/product_name"
        android:padding="@dimen/text_padding"
        app:layout_constraintBottom_toTopOf="@+id/product_price"
        app:layout_constraintStart_toStartOf="@+id/product_price"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="number"
        android:labelFor="@id/product_price"
        android:padding="@dimen/text_padding"
        app:layout_constraintBottom_toTopOf="@+id/product_quantity"
        app:layout_constraintStart_toStartOf="@+id/product_quantity"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity"
        android:inputType="number"
        android:labelFor="@id/product_quantity"
        android:padding="@dimen/text_padding"
        app:layout_constraintBottom_toTopOf="@+id/product_supplier_name"
        app:layout_constraintStart_toStartOf="@+id/product_supplier_name"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />

    <EditText
        android:id="@+id/product_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_supplier_name"
        android:inputType="text"
        android:labelFor="@id/product_supplier_name"
        android:padding="@dimen/text_padding"
        app:layout_constraintBottom_toTopOf="@+id/product_supplier_phone_number"
        app:layout_constraintStart_toStartOf="@+id/product_supplier_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity" />

    <EditText
        android:id="@+id/product_supplier_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_supplier_phone_number"
        android:inputType="phone"
        android:labelFor="@id/product_supplier_phone_number"
        android:padding="@dimen/text_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_supplier_name" />

</android.support.constraint.ConstraintLayout>